Update CSS and Components.html
Update CSS and components.html for image CDN linking.

--- a/Fullstack/ProjectFour/item_catalog/vagrant/catalog/templates/components.html
+++ b/Fullstack/ProjectFour/item_catalog/vagrant/catalog/templates/components.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="icon"
       type="image/png"
-      href="static/img/icon/glyphicons-260-barcode.png">
+      href="https://raw.githubusercontent.com/johncban/Udacity/fsnd-prjfour/Fullstack/ProjectFour/item_catalog/vagrant/catalog/static/img/icon/glyphicons-260-barcode.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel=stylesheet type=text/css href="{{url_for('static', filename='bootstrap337/css/bootstrap.css')}}">
 <link rel=stylesheet type=text/css href="{{url_for('static', filename='css/main.css')}}">
@@ -25,21 +25,25 @@
   </nav>
     <section class="row-fluid no-gutter hidden-xs">
         <article class="col-sm-3 fade-in one">
-          <img src="static/img/cpu.png" class="img-responsive">
+          <!-- <img src="static/img/cpu.png" class="img-responsive"> -->
+          <img src="https://cdn.rawgit.com/johncban/Udacity/fsnd-prjfour/Fullstack/ProjectFour/item_catalog/vagrant/catalog/static/img/cpu.png" class="img-responsive">
         </article>
         <article class="col-sm-3 fade-in two">
-          <img src="static/img/ram.png" class="img-responsive">
+          <!-- <img src="static/img/ram.png" class="img-responsive"> -->
+          <img src="https://cdn.rawgit.com/johncban/Udacity/fsnd-prjfour/Fullstack/ProjectFour/item_catalog/vagrant/catalog/static/img/ram.png" class="img-responsive">
         </article>
         <article class="col-sm-3 fade-in three">
-          <img src="static/img/hd.png" class="img-responsive">
+          <!-- <img src="static/img/hd.png" class="img-responsive"> -->
+          <img src="https://cdn.rawgit.com/johncban/Udacity/fsnd-prjfour/Fullstack/ProjectFour/item_catalog/vagrant/catalog/static/img/hd.png" class="img-responsive">
         </article>
         <article class="col-sm-3 fade-in four">
-          <img src="static/img/mb.png" class="img-responsive">
+          <!-- <img src="static/img/mb.png" class="img-responsive"> -->
+          <img src="https://cdn.rawgit.com/johncban/Udacity/fsnd-prjfour/Fullstack/ProjectFour/item_catalog/vagrant/catalog/static/img/mb.png" class="img-responsive">
         </article>
       </section>
 </header>
 <section class="container-fluid jumbotron bottom-space">
-<section class="sec-h-one">
+<section>
   <h1 class="fade-in four h-one">
       Inventory Catalog
   </h1>
