--- a/Fullstack/ProjectFour/item_catalog/vagrant/catalog/templates/pcParts.html
+++ b/Fullstack/ProjectFour/item_catalog/vagrant/catalog/templates/pcParts.html
@@ -1,8 +1,8 @@
 <html>
 <head>
   <link rel="icon"
-      type="image/png"
-      href="static/img/icon/glyphicons-260-barcode.png">
+        type="image/png"
+        href="https://raw.githubusercontent.com/johncban/Udacity/fsnd-prjfour/Fullstack/ProjectFour/item_catalog/vagrant/catalog/static/img/icon/glyphicons-260-barcode.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel=stylesheet type=text/css href="{{url_for('static', filename='bootstrap337/css/bootstrap.css')}}">
 <link rel=stylesheet type=text/css href="{{url_for('static', filename='css/main.css')}}">
