--- a/Fullstack/ProjectFour/item_catalog/vagrant/catalog/templates/login.html
+++ b/Fullstack/ProjectFour/item_catalog/vagrant/catalog/templates/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
   <link rel="icon"
-      type="image/png"
-      href="static/img/icon/glyphicons-260-barcode.png">
+        type="image/png"
+        href="https://raw.githubusercontent.com/johncban/Udacity/fsnd-prjfour/Fullstack/ProjectFour/item_catalog/vagrant/catalog/static/img/icon/glyphicons-260-barcode.png">
     <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
     </script>
