--- a/Fullstack/ProjectFour/item_catalog/vagrant/catalog/templates/login.html
+++ b/Fullstack/ProjectFour/item_catalog/vagrant/catalog/templates/login.html
@@ -26,6 +26,11 @@
 
 
 <body>
+    <header>
+        <nav>
+            {% include "header.html" %}
+        </nav>
+    </header>
 <div class="video-background">
     <div class="video-foreground">
         <iframe src="https://www.youtube.com/embed/mF06orSM7zY?rel=0&amp;controls=0&amp;showinfo=0&rel=0&autoplay=1&loop=1"
