--- a/mw-StageOne/css/styles.css
+++ b/mw-StageOne/css/styles.css
@@ -34,7 +34,7 @@ a {
 
 a:hover,
 a:focus {
-  color: #3397db;
+  color: #909095;
   text-decoration: none;
 }
 
@@ -139,7 +139,7 @@ nav h1 a {
 /* Add a color on mouse-over */
 
 #breadcrumb li a:hover {
-  color: yellow;
+  color: #252831;
   text-decoration: underline;
 }
 
@@ -162,7 +162,7 @@ nav h1 a {
 
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 20px;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
@@ -223,6 +223,7 @@ nav h1 a {
     max-width: 300px;
   }
 }
+
 
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -378,7 +379,7 @@ h3 {
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
-  padding-bottom: 1pt;
+  /* padding-bottom: 1pt; */
 }
 
 #reviews-list {
